Update core components, Docker IOWarp files, and add architecture documentation

--- a/configs/blueprints/retriever_agent.yaml
+++ b/configs/blueprints/retriever_agent.yaml
@@ -41,6 +41,6 @@ environment:
 
 agent:
   type: retriever
-  backend: claude
+  backend: claude  # Claude will now understand skip_cache
   model: sonnet
   default_tag_pattern: "*"
