--- a/docker/iowarp/wrp_conf.yaml
+++ b/docker/iowarp/wrp_conf.yaml
@@ -1,20 +1,44 @@
 # IOWarp runtime configuration
-runtime:
-  shared_memory:
-    size: 4G
-    backend: posix
-  devices:
-    - type: ram
-      capacity: 2G
-    - type: nvme
-      path: /var/lib/iowarp/nvme
-      capacity: 50G
+# Used by chimaera_start_runtime via WRP_RUNTIME_CONF env var
 
-context_engine:
-  default_format: arrow
-  max_blob_size: 1G
-  compression: lz4
+# Worker thread configuration
+workers:
+  sched_threads: 4
+  slow_threads: 4
 
+# Memory segment configuration
+memory:
+  main_segment_size: 1073741824       # 1GB
+  client_data_segment_size: 536870912  # 512MB
+  runtime_data_segment_size: 536870912 # 512MB
+
+# Network configuration
+networking:
+  port: 5555
+  neighborhood_size: 32
+  wait_for_restart: 30
+  wait_for_restart_poll_period: 1
+
+# Logging configuration
 logging:
-  level: info
-  output: /var/log/iowarp/runtime.log
+  level: "info"
+  file: "/tmp/chimaera.log"
+
+# Runtime configuration
+runtime:
+  stack_size: 65536
+  queue_depth: 10000
+  lane_map_policy: "round_robin"
+  heartbeat_interval: 1000
+
+# Compose section - creates CTE pool with storage targets on startup
+compose:
+  - mod_name: wrp_cte_core
+    pool_name: wrp_cte_core
+    pool_query: local
+    pool_id: "512.0"
+    storage:
+      - path: "ram::cte_ram_cache"
+        bdev_type: "ram"
+        capacity_limit: "2GB"
+        score: 1.0
